# MystVPN_Bot

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  BOT_MIGRATION_PLAN.md  Claude.md  Full.md  MAY_2026_PLAN.md  Obhod.md  QA_CHECKLIST.md  TELEGRAM_VPN_BOT_DOCUMENTATION.md  auto_deploy.sh  config.py  deploy.sh  deploy_to_server.ps1  docker-compose.yml  late.md  logrotate.conf  main.py  migrate.py  mystvpn.service  mystvpn_local.db  vacancy_post.md  webhook_server.py  БИЗНЕС_ПЛАН_MystVPN.md  ОФЕРТА_MystVPN.md
.claude/: settings.local.json
.claude/commands/: deploy.md  fix.md  logs.md  review.md  server.md  ssl.md
.github/workflows/: deploy.yml
Bot-Traffic/: CHANGES.md
Support_Bot/: .env.example  CLAUDE.md  config.py  main.py
Support_Bot/content/: faq.py
VPN-Bot/: .env.example  Dockerfile  auto_deploy.sh  config.py  main.py  migrate.py  requirements.txt
VPN-Bot/models/: user.py  (+3 more)
VPN-Site/: CLAUDE.md  IMPROVEMENTS.md  SKILLS.md  index.html
cpn-protocol/: BUILD.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  build.ps1
cpn-protocol/.cargo/: config.toml
cpn-protocol/crates/cpn-client/: Cargo.toml
cpn-protocol/crates/cpn-client/src/: client.rs  lib.rs
cpn-protocol/crates/cpn-core/: Cargo.toml
cpn-protocol/crates/cpn-core/src/: ffi.rs  lib.rs  observatory.rs  routing.rs  session.rs  transport.rs  tun.rs  wg_fake.rs  yggdrasil.rs
cpn-protocol/crates/cpn-protocol/: Cargo.toml
cpn-protocol/crates/cpn-protocol/src/: crypto.rs  error.rs  lib.rs  packet.rs  replay.rs
cpn-protocol/crates/cpn-protocol/src/types/: api.rs  client.rs  config.rs  crypto.rs  mod.rs  packet.rs  transport.rs
cpn-protocol/crates/cpn-server/: Cargo.toml
cpn-protocol/crates/cpn-server/src/: api.rs  entry_server.rs  exit_server.rs  lib.rs  main.rs  subscription.rs
cpn-protocol/docs/: API.md  ARCHITECTURE.md  CRYPTOGRAPHY.md  TRANSPORT.md
cpn-protocol/flutter/: pubspec.yaml
cpn-protocol/flutter/lib/src/: key_parser.dart
cpn-protocol/src/: main.rs
cpn-protocol/src/binaries/: cpn_core_no_std.rs
cpn-protocol/src/commands/: connect.rs  gen_config.rs  import.rs  mod.rs  service.rs  status.rs
database/: db.py
handlers/: __init__.py  admin.py  cabinet.py  donate.py  partner.py  payments.py  referral.py  start.py  status.py  subscriptions.py
keyboards/: __init__.py  inline.py  reply.py
locales/: _example.json  ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  id.json  ja.json  ko.json  ms.json  pt.json  ru.json  tr.json  uk.json  vi.json  zh.json
models/: donation.py  gift_code.py  subscription.py  user.py
scripts/: setup_server.sh
server/: change_xray_port.py  nginx_keybest.conf  remote_setup.py  reset_all_keys.py  run_on_host.py  setup_domain.sh  setup_stream.py  ssh_cmd.py  upload_and_run.py
services/: __init__.py  donation_service.py  expiry_watchdog.py  gift_service.py  i18n.py  key_helper.py  marketing_service.py  notification_service.py  partner_service.py  payment_service.py  promo_service.py  referral_service.py  subscription_service.py  wireguard_service.py  xray_service.py
site/: ARCHITECTURE.md  CLAUDE.md  README.md  index.html
traffic-bot/: CLAUDE.md  README.md  admin_panel.py  bot.py
vpn-app/: CLAUDE.md  README.md
vpn-protocol/: CLAUDE.md  README.md
Трафик-бот/: .env.example  .gitignore  Dockerfile  admin_panel.py  bot.py  config.py  docker-compose.yml  requirements.txt
(+43 files in other folders)
