[package]
name = "cpn-hub"
version = "1.0.0"
edition = "2021"
description = "CPN HUB - Universal VPN Client"
license = "MIT"

[[bin]]
name = "cpn-hub"
path = "src/main.rs"

[dependencies]
cpn-protocol = { path = "crates/cpn-protocol" }
cpn-core = { path = "crates/cpn-core" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
thiserror = "1.0"
rand = "0.8"
getrandom = "0.2"
base64 = "0.21"
chrono = "0.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake3 = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true