[package]
name = "cpn-client"
version = "0.1.0"
edition = "2021"
description = "CPN client application"
license = "MIT"

[[bin]]
name = "cpn-client"
path = "src/main.rs"

[dependencies]
cpn-core = { path = "../cpn-core" }
cpn-protocol = { path = "../cpn-protocol" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.12"
