[package]
name = "cpn-core"
version = "0.1.0"
edition = "2021"
description = "CPN core library with crypto and transport"
license = "MIT"

[dependencies]
cpn-protocol = { path = "../cpn-protocol" }
tokio = { version = "1.35", features = ["full"] }
aes-gcm = "0.10"
getrandom = "0.2"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.21"
futures = "0.3"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake3 = "1.5"