[package]
name = "cpn-protocol"
version = "0.1.0"
edition = "2021"
description = "CPN protocol core implementation"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
aes-gcm = "0.10"
getrandom = "0.2"
rand = "0.8"
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10"
blake3 = { version = "1.5", features = ["no_avx512", "no_avx2", "no_sse41", "no_sse2"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
