[package]
name = "cpn-server"
version = "0.1.0"
edition = "2021"
description = "CPN server applications"
license = "MIT"

[[bin]]
name = "cpn-server"
path = "src/main.rs"

[dependencies]
cpn-core = { path = "../cpn-core" }
cpn-protocol = { path = "../cpn-protocol" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
chrono = "0.4"
jsonwebtoken = "9.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }